tests/parser/pass/expressionWithFunctionCall.c
int a;
int b(char, char, char);
int c(int);
char d();
int main() {
  if (a<b(1,2,3)) {
  if (d() == c(1)) {;};
  }
}
