tests/parser/fail/test_cond_if_error.c
char blub(char c, int b){
	int a;
	while(a == b){
	}
	{}
	;
	{;};
	{
	if (a; b){
	}
	}
}
